@@ -1,30 +1,26 @@
 package com.github.saphyra.apphub.service.skyxplore.lobby.service;
 
-import com.github.saphyra.apphub.api.platform.message_sender.model.WebSocketEvent;
-import com.github.saphyra.apphub.api.platform.message_sender.model.WebSocketEventName;
-import com.github.saphyra.apphub.api.platform.message_sender.model.WebSocketMessage;
-import com.github.saphyra.apphub.api.skyxplore.model.SkyXploreCharacterModel;
-import com.github.saphyra.apphub.api.skyxplore.response.LobbyMemberStatus;
+import com.github.saphyra.apphub.api.skyxplore.response.lobby.LobbyMemberResponse;
+import com.github.saphyra.apphub.api.skyxplore.response.lobby.LobbyMemberStatus;
 import com.github.saphyra.apphub.lib.common_domain.ErrorCode;
 import com.github.saphyra.apphub.lib.common_util.collection.CollectionUtils;
-import com.github.saphyra.apphub.service.skyxplore.lobby.dao.Alliance;
 import com.github.saphyra.apphub.service.skyxplore.lobby.dao.Invitation;
 import com.github.saphyra.apphub.service.skyxplore.lobby.dao.Lobby;
 import com.github.saphyra.apphub.service.skyxplore.lobby.dao.LobbyDao;
-import com.github.saphyra.apphub.service.skyxplore.lobby.dao.Member;
-import com.github.saphyra.apphub.service.skyxplore.lobby.proxy.CharacterProxy;
+import com.github.saphyra.apphub.service.skyxplore.lobby.dao.LobbyMember;
 import com.github.saphyra.apphub.service.skyxplore.lobby.proxy.MessageSenderProxy;
+import com.github.saphyra.apphub.service.skyxplore.lobby.service.member.LobbyMemberToResponseConverter;
 import com.github.saphyra.apphub.test.common.ExceptionValidator;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -33,21 +29,18 @@ import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.verify;
 
 @ExtendWith(MockitoExtension.class)
-public class JoinToLobbyServiceTest {
+class JoinToLobbyServiceTest {
     private static final UUID USER_ID = UUID.randomUUID();
     private static final UUID INVITOR_ID = UUID.randomUUID();
-    private static final String PLAYER_NAME = "player-name";
-    private static final UUID HOST = UUID.randomUUID();
-    private static final String ALLIANCE_NAME = "alliance-name";
 
     @Mock
     private LobbyDao lobbyDao;
 
     @Mock
-    private CharacterProxy characterProxy;
+    private MessageSenderProxy messageSenderProxy;
 
     @Mock
-    private MessageSenderProxy messageSenderProxy;
+    private LobbyMemberToResponseConverter lobbyMemberToResponseConverter;
 
     @InjectMocks
     private JoinToLobbyService underTest;
@@ -59,15 +52,15 @@ public class JoinToLobbyServiceTest {
     private Invitation invitation;
 
     @Mock
-    private Member member;
+    private LobbyMember lobbyMember;
 
     @Mock
-    private Alliance alliance;
+    private LobbyMemberResponse lobbyMemberResponse;
 
     @Test
-    public void acceptInvitation_notInvited() {
+    void acceptInvitation_notInvited() {
         given(lobbyDao.findByUserIdValidated(INVITOR_ID)).willReturn(lobby);
-        given(lobby.getInvitations()).willReturn(Arrays.asList(invitation));
+        given(lobby.getInvitations()).willReturn(List.of(invitation));
         given(invitation.getCharacterId()).willReturn(UUID.randomUUID());
 
         Throwable ex = catchThrowable(() -> underTest.acceptInvitation(USER_ID, INVITOR_ID));
@@ -76,45 +69,33 @@ public class JoinToLobbyServiceTest {
     }
 
     @Test
-    public void acceptInvitation() {
+    void acceptInvitation() {
         given(lobbyDao.findByUserIdValidated(INVITOR_ID)).willReturn(lobby);
         given(lobby.getInvitations()).willReturn(CollectionUtils.toList(invitation));
         given(invitation.getCharacterId()).willReturn(USER_ID);
-        given(lobby.getMembers()).willReturn(new HashMap<>());
+        Map<UUID, LobbyMember> members = new HashMap<>();
+        given(lobby.getMembers()).willReturn(members);
 
         underTest.acceptInvitation(USER_ID, INVITOR_ID);
 
         assertThat(lobby.getInvitations()).isEmpty();
-        assertThat(lobby.getMembers()).containsEntry(USER_ID, Member.builder().userId(USER_ID).status(LobbyMemberStatus.NOT_READY).build());
+        assertThat(members).hasSize(1);
+        assertThat(members.get(USER_ID).getUserId()).isEqualTo(USER_ID);
+        assertThat(members.get(USER_ID).getStatus()).isEqualTo(LobbyMemberStatus.DISCONNECTED);
     }
 
     @Test
-    public void userJoinedToLobby() {
+    void userJoinedToLobby() {
         given(lobbyDao.findByUserIdValidated(USER_ID)).willReturn(lobby);
-        given(lobby.getMembers()).willReturn(CollectionUtils.singleValueMap(USER_ID, member));
-        given(characterProxy.getCharacter(USER_ID)).willReturn(SkyXploreCharacterModel.builder().name(PLAYER_NAME).build());
-        given(lobby.getHost()).willReturn(HOST);
-        given(lobby.getAlliances()).willReturn(Arrays.asList(alliance));
-        given(alliance.getAllianceName()).willReturn(ALLIANCE_NAME);
-        given(member.getStatus()).willReturn(LobbyMemberStatus.NOT_READY);
+        Map<UUID, LobbyMember> members = Map.of(USER_ID, lobbyMember);
+        given(lobby.getMembers()).willReturn(members);
+        given(lobbyMemberToResponseConverter.convertMember(lobbyMember)).willReturn(lobbyMemberResponse);
 
         underTest.userJoinedToLobby(USER_ID);
 
-        verify(member).setConnected(true);
-        verify(member).setStatus(LobbyMemberStatus.NOT_READY);
-
-        ArgumentCaptor<WebSocketMessage> argumentCaptor = ArgumentCaptor.forClass(WebSocketMessage.class);
-        verify(messageSenderProxy).sendToLobby(argumentCaptor.capture());
-        WebSocketMessage message = argumentCaptor.getValue();
-        assertThat(message.getRecipients()).containsExactly(USER_ID);
-
-        WebSocketEvent event = message.getEvent();
-        assertThat(event.getEventName()).isEqualTo(WebSocketEventName.SKYXPLORE_LOBBY_JOIN_TO_LOBBY);
-
-        JoinToLobbyService.JoinMessage payload = (JoinToLobbyService.JoinMessage) event.getPayload();
-        assertThat(payload.getCharacterName()).isEqualTo(PLAYER_NAME);
-        assertThat(payload.isHost()).isFalse();
-        assertThat(payload.getAlliances()).containsExactly(ALLIANCE_NAME);
-        assertThat(payload.getStatus()).isEqualTo(LobbyMemberStatus.NOT_READY);
+        verify(lobbyMember).setConnected(true);
+        verify(lobbyMember).setStatus(LobbyMemberStatus.NOT_READY);
+        verify(messageSenderProxy).lobbyMemberModified(lobbyMemberResponse, members.keySet());
+        verify(messageSenderProxy).lobbyMemberConnected(lobbyMemberResponse, members.keySet());
     }
 }
